_sass/_customStyle.scss
@import "bourbon/bourbon";

$max-width: em(980);

@import "neat/neat";

@import "variables";
@import "fonts";

body {
    font-family: 'Arvo', sans-serif;
    font-size: 16px;
    color: #222;
}

body, .header {
    background: #f4f4f4 $bg-image fixed;
}

a {
    color: #006977;
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }
}

.container {
    @include outer-container;
}

.header {
    height: 60px;
    box-shadow: 0px 60px 90px -26px rgba(0, 0, 0, 0.5);
    @include fill-parent;

    @include media($desktop-up) {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
    }

    .inner-header {
        max-width: 980px;
        position: relative;
        margin: 0 auto;
    }

    a.cv-link {
        display: block;
        line-height: 60px;
        padding-right: 20px;
        font-size: 1.2em;
        position: absolute;
        right: 0;
    }
    h1 {
        font: normal 35px/60px "Arvo", serif;
        text-align: center;

        a {
            color: black;
        }
    }
}

h2.subtitle {
    text-align: center;
    margin: 1em 0;

    @include media($desktop-up) {
        padding-top: 70px;
    }
}

.content {
    padding: 2em 4%;
}

#home {
    @include outer-container;

    @include media($desktop-up) {
        padding-top: 100px;
    }

    .category {
        margin-top: 1em;
        overflow: hidden;

        @include media($tablet-up) {
            text-align: center;
        }

        h2 {
            @include media($mobile-only) {
                margin-left: 25%;
            }
            @include media($tablet-up) {
                font-size: 1.8em;
                text-align: center;
                margin: .5em 0;
            }
        }
    }

    .item {
        padding-bottom: .7em;

        @include media($mobile-only) {
            overflow: hidden;
            margin: .7em 0;
            border-bottom: 1px dashed #555;

            &:last-child {
                border-bottom: none;
            }
        }
        @include media($tablet-up) {
            display: inline-block;
            text-align: center;
            vertical-align: top;
        }
        @include media($small-tablet-only) {
            width: 48%;
            margin-right: 4%;

            &:nth-of-type(2n),
            &:last-child {
                margin-right: 0;
            }
        }
        @include media($big-tablet-up) {
            width: 30%;
            margin-right: 5%;

            &:nth-of-type(3n),
            &:last-child {
                margin-right: 0;
            }
        }

        .image {
            border-radius: 50%;
            box-shadow: inset 5px 5px 30px rgba(0, 0, 0, 0.5);
            overflow: hidden;
            z-index: -1;
            height: 0;
            background-repeat: no-repeat;
            background-size: cover;
            position: relative;

            @include media($tablet-up) {
                width: 75%;
                margin: 0 auto;
                padding-bottom: 75%;
            }
            @include media($mobile-only) {
                width: 20%;
                float: left;
                padding-bottom: 20%;
                margin-right: 5%;
            }
        }

        h3 {
            font-size: 1.5em;
            font-family: "Quicksand", sans-serif;
        }
        p {
            font-style: italic;
        }
    }
}

.cv {
    &#home {
        padding-top: 0;
    }

    h2 {
        clear: left;
    }
    .contact {
        float: left;
        width: 70%;

        dd {
            font-family: verdana, sans-serif;
        }
    }
    .me {
        float: right;
        width: 20%;
        border-radius: 50%;
        @include media($tablet-up) {
            margin-right: 5%;
        }
    }
    .left {
        @include media($tablet-up) {
            width: 70%;
            float: left;
        }

        h2 {
            margin: 1.5em 0 1em 30%;

            @include media($mobile-only) {
                margin-left: 0;
            }
        }
    }

    dl {
        clear: left;
        overflow: hidden;

        dt {
            margin-bottom: 10px;

            @include media($tablet-up) {
                float: left;
                width: 20%;
                clear: left;
            }
        }
        dd {
            font-size: .9em;
            margin-bottom: 15px;

            @include media($tablet-up) {
                float: left;
                max-width: 70%;
                margin-left: 10%;
            }
            @include media($mobile-only) {
                padding-bottom: 5px;
                border-bottom: 1px solid #555;
            }

            p {
                font-family: verdana, sans-serif;
            }
        }
        strong {
            font-weight: normal;
            font-size: 1.25em;
        }
    }
    .right {
        @include media($tablet-up) {
            width: 30%;
            float: left;
        }

        .box {
            background: rgba(31, 113, 139, 0.9);
            color: white;
            padding: 8px;
            margin: 1em 0;

            h3 {
                border-bottom: 1px solid white;
                margin-bottom: .5em;
            }
        }

        ul {
            list-style-type: none;
        }
    }
}

.footer {
    margin-bottom: 20px;

    .contact {
        text-align: center;
        margin: 1em 0;
        font-style: italic;

    }
    .social-icons a {
        display: inline-block;
        margin-right: 1em;
        margin-bottom: 1em;
        color: #668999;
        text-align: center;
    }
}

.social-icons {
    display: -webkit-flex;
    display: -moz-flex;
    display: flex;
    -webkit-justify-content: space-between;
    justify-content: space-between;
}

